# rlm-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  eslint.config.js  fly.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
assets/uml/: arch.puml  async.puml
crates/app/: Cargo.toml
crates/app/src/: client.rs  launcher.rs  lib.rs  main.rs  pool.rs  protocol.rs  session.rs
crates/rlm/: Cargo.toml
crates/rlm/src/: lib.rs  llm.rs  logger.rs  main.rs  prompts.rs  repl.rs  rlm.rs  utils.rs
scripts/: conn.sh  create.sh  delete.sh  ec2-setup.sh  list.sh  reboot.sh  setup.sh  start.sh  stop.sh
