[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "app"

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
dotenvy = "0.15.7"
goose = "0.17"
reqwest = { version = "0.11", features = ["cookies", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.38", features = ["full"] }
tower = "0.5"
uuid = { version = "1.18", features = ["v4"] }

rlm = { path = "../rlm" }
