[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "app"

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
dotenvy = "0.15.7"
goose = "0.17"
rand = "0.9.2"
reqwest = { version = "0.11", features = ["cookies", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["compression-gzip", "timeout"] }
uuid = { version = "1.18", features = ["v4"] }

rlm = { path = "../rlm" }
mimalloc = { version = "0.1.48", optional = true }

[features]
mimalloc = ["dep:mimalloc"]
